fixing namespacing issues, emit as artifact

--- a/example/src/cljs/example/styles.styl
+++ b/example/src/cljs/example/styles.styl
@@ -1,12 +1,10 @@
 .head
     composes large from './typo.css'
     composes blue-ish from './typo.css'
-    background-color orange
     height 10em
 
 .foot
     composes green-ish from './typo.css'
-    background-color pink
     height 10em
 
 
