--- a/example/src/cljs/example/typo.styl
+++ b/example/src/cljs/example/typo.styl
@@ -2,7 +2,7 @@
     font-size 2em
 
 .blue-ish
-    color blue
+    background-color blue
 
 .green-ish
-    color green
+    background-color green
